# corunx

./: group.html
admin-ui/: README.md  index.html  package.json  vite.config.ts
admin-ui/src/: App.tsx  index.css
admin-ui/src/api/: client.ts  types.ts
admin-ui/src/auth/: AuthContext.tsx  RequireAuth.tsx  session.ts
admin-ui/src/components/: Layout.tsx  format.tsx
admin-ui/src/pages/: Artifacts.tsx  Dashboard.tsx  DeviceDetail.tsx  Devices.tsx  Events.tsx  Jobs.tsx  Login.tsx
normalcf/: .gitignore  package-lock.json  package.json  pylock.toml  pyproject.toml  wrangler.jsonc
normalcf/docs/: group-loader-review.md
normalcf/migrations/: 0001_lab.sql  0002_lab_gap.sql  0003_defend_fields.sql  0004_lab_ops.sql
normalcf/python_modules/fastapi-0.139.2.dist-info/: RECORD
normalcf/python_modules/idna-3.18.dist-info/: RECORD
normalcf/python_modules/workers_runtime_sdk-1.6.3.dist-info/: METADATA  RECORD
normalcf/src/: worker.py
normalcf/src/lab/: __init__.py  admin.py  artifacts.py  auth.py  auth_routes.py  columns.py  db.py  devices.py  events.py  jobs.py  misc.py  schemas.py
normalcf/static/: .gitignore  group.html
